--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ td {
 }
 
 .simpleStatsPadding {
-	padding: 0 10px 0 10px;
+	padding: 0 5px 0 5px;
 }
 
 #sidebarLogoImg {
@@ -123,6 +123,8 @@ option {
 
 
 .view_content {
+	display: flex;
+	justify-content: space-evenly;
 	overflow: inherit;
 	background-color: #000000aa;
 	position: inherit;
@@ -148,7 +150,7 @@ option {
 }
 
 .unit_table {
-	width: 100%;
+	width: 98%;
 }
 
 .unit_table_header_image {
@@ -526,98 +528,112 @@ sup {
 	border-color: rgb(2, 1, 90);
 	border-width: 1px;
 	border-style: solid;
-	overflow: hidden;
-}
+	overflow-y: scroll;
+	overflow-x: hidden;
 
-.deckContainerActive {
-	border-color: rgb(192, 162, 81);
-}
+	.deckContainerActive {
+		border-color: rgb(192, 162, 81);
+	}
 
-.deckSlotContainer {
-	width: 100%;
-	height: fit-content;
-	margin: 5 0 5 0;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	align-items: center;
-	flex-wrap: wrap;
-}
+	.deckSlotContainer {
+		width: 100%;
+		height: fit-content;
+		margin: 5 0 5 0;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		align-items: center;
+		flex-wrap: wrap;
+	}
 
-.unit_deck_slot_div {
-	width: 19%;
-	border-color: rgba(2, 0, 36, 0.781);
-	border-width: 2px;
-	border-style: solid;
-	margin: 1%;
-	overflow: hidden;
-}
+	.unit_deck_slot_div {
+		width: 19%;
+		border-color: rgba(2, 0, 36, 0.781);
+		border-width: 2px;
+		border-style: solid;
+		margin: 1%;
+		overflow: hidden;
+	}
 
-.unit_deck1_slot_div_filled {
-	border-color: rgb(19, 104, 19);
-}
+	.unit_deck1_slot_div_filled {
+		border-color: rgb(19, 104, 19);
+	}
 
-.unit_deck2_slot_div_filled {
-	border-color: rgb(104, 24, 24);
-}
+	.unit_deck2_slot_div_filled {
+		border-color: rgb(104, 24, 24);
+	}
 
-.deck_stats_div {
-	font-weight: 350;
-	font-size: 16px;
-	line-height: 80%;
-	width: 300px;
-	border: 0px;
-	border-style: solid;
-	padding: 5px;
-}
+	.deck_stats_div {
+		font-weight: 350;
+		font-size: 16px;
+		line-height: 80%;
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		border: 0px;
+		border-style: solid;
+		padding: 5px;
+	}
 
-.deck_stats_table {
-	font-variant: small-caps;
-	width: 300px;
-}
+	.statDiv {
+		font-variant: small-caps;
+		display: flex;
+		flex-direction: row;
+		width: 20%;
+		height: 0%;
+		padding: 4 0 4 0;
+		align-items: center;
+		justify-content: center;
+		border: solid;
+		border-width: 1px;
+		border-color: green;
+	}
 
-.deck_stats_img {
-	width: 15px;
-	height: 15px;
+	.complexStatDiv {
+		justify-content: left;
+		width: 100%;
+		line-height: 200%;
+		height: 100%;
+		align-items: center;
+	}
 
-}
+	.resourceStatDiv {
+		width: 30%;
+	}
 
-.deck_stats_td {
-	border: none;
-	border-width: 1px;
-	padding: 0px;
-	width: 300px;
-	margin: 0px;
-}
+	.deck_stats_img {
+		width: 30%;
+	}
 
-.deck_stats_td_right {
-	border: dashed;
-	border-color: rgb(0, 0, 0);
-	border-width: 1px;
-	padding: 0px;
-	width: 1200px;
-	margin: 0px;
-}
+	.resourceStatImg {
+		width: 20%;
+	}
 
-#unit_view_card_btn {
-	color: grey;
-	border-color: grey;
-}
+	.deck_stats_img {
+		width: 30%;
+	}
 
-.links_div {
-	flex: auto;
-	position: relative;
-}
+	#unit_view_card_btn {
+		color: grey;
+		border-color: grey;
+	}
 
-.links_content {
-	position: inherit;
-	color: grey;
-}
+	.links_div {
+		flex: auto;
+		position: relative;
+	}
 
-.selected {
-	color: rgb(192, 162, 81);
-}
+	.links_content {
+		position: inherit;
+		color: grey;
+	}
 
-.selected {
-	color: rgb(192, 162, 81);
-}
+	.selected {
+		color: rgb(192, 162, 81);
+	}
+
+	.selected {
+		color: rgb(192, 162, 81);
+	}
