--- a/src/styles.css
+++ b/src/styles.css
@@ -523,117 +523,122 @@ sup {
 }
 
 .deckContainer {
-	width: 48%;
+	width: 40%;
 	height: 100%;
 	border-color: rgb(2, 1, 90);
 	border-width: 1px;
 	border-style: solid;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	overflow-x: hidden;
+}
 
-	.deckContainerActive {
-		border-color: rgb(192, 162, 81);
-	}
+.deckContainerActive {
+	border-color: rgb(192, 162, 81);
+}
 
-	.deckSlotContainer {
-		width: 100%;
-		height: fit-content;
-		margin: 5 0 5 0;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-evenly;
-		align-items: center;
-		flex-wrap: wrap;
-	}
+.deckSlotContainer {
+	width: 100%;
+	height: fit-content;
+	margin: 5 0 5 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+}
 
-	.unit_deck_slot_div {
-		width: 19%;
-		border-color: rgba(2, 0, 36, 0.781);
-		border-width: 2px;
-		border-style: solid;
-		margin: 1%;
-		overflow: hidden;
-	}
+.unit_deck_slot_div {
+	width: 19%;
+	border-color: rgba(2, 0, 36, 0.781);
+	border-width: 2px;
+	border-style: solid;
+	margin: 1%;
+	overflow: hidden;
+}
 
-	.unit_deck1_slot_div_filled {
-		border-color: rgb(19, 104, 19);
-	}
+.unit_deck1_slot_div_filled {
+	border-color: rgb(19, 104, 19);
+}
 
-	.unit_deck2_slot_div_filled {
-		border-color: rgb(104, 24, 24);
-	}
+.unit_deck2_slot_div_filled {
+	border-color: rgb(104, 24, 24);
+}
 
-	.deck_stats_div {
-		font-weight: 350;
-		font-size: 16px;
-		line-height: 80%;
-		width: 100%;
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: space-between;
-		border: 0px;
-		border-style: solid;
-		padding: 5px;
-	}
+.deck_stats_div {
+	font-weight: 350;
+	font-size: 16px;
+	line-height: 80%;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	border: 0px;
+	border-style: solid;
+	padding: 5px;
+}
 
-	.statDiv {
-		font-variant: small-caps;
-		display: flex;
-		flex-direction: row;
-		width: 20%;
-		height: 0%;
-		padding: 4 0 4 0;
-		align-items: center;
-		justify-content: center;
-		border: solid;
-		border-width: 1px;
-		border-color: green;
-	}
+.statDiv {
+	font-variant: small-caps;
+	display: flex;
+	flex-direction: row;
+	width: 20%;
+	height: 0%;
+	padding: 4 0 4 0;
+	align-items: center;
+	justify-content: center;
+	border: none;
+	border-width: 1px;
+	border-color: green;
+}
 
-	.complexStatDiv {
-		justify-content: left;
-		width: 100%;
-		line-height: 200%;
-		height: 100%;
-		align-items: center;
-	}
+.complexStatDiv {
+	justify-content: left;
+	width: 100%;
+	line-height: 100%;
+	height: 100%;
+}
 
-	.resourceStatDiv {
-		width: 30%;
-	}
+.resourceStatDiv {
+	width: 30%;
+}
 
-	.deck_stats_img {
-		width: 30%;
-	}
+.deck_stats_img {
+	width: 30%;
+}
 
-	.resourceStatImg {
-		width: 20%;
-	}
+.resourceStatImg {
+	width: 20%;
+}
 
-	.deck_stats_img {
-		width: 30%;
-	}
+.deck_stats_img {
+	width: 30%;
+}
 
-	#unit_view_card_btn {
-		color: grey;
-		border-color: grey;
-	}
+.deck_stats_img_small {
+	width: 8%;
+	height: 8%;
+}
 
-	.links_div {
-		flex: auto;
-		position: relative;
-	}
+#unit_view_card_btn {
+	color: grey;
+	border-color: grey;
+}
 
-	.links_content {
-		position: inherit;
-		color: grey;
-	}
+.links_div {
+	flex: auto;
+	position: relative;
+}
 
-	.selected {
-		color: rgb(192, 162, 81);
-	}
+.links_content {
+	position: inherit;
+	color: grey;
+}
 
-	.selected {
-		color: rgb(192, 162, 81);
-	}
+.selected {
+	color: rgb(192, 162, 81);
+}
+
+.selected {
+	color: rgb(192, 162, 81);
+}
