--- a/src/styles.css
+++ b/src/styles.css
@@ -94,14 +94,6 @@ option {
 	color: white;
 }
 
-.view {
-	position: absolute;
-	border-width: 1px;
-	border-color: rgb(95, 82, 47);
-	border-color: rgb(95, 82, 47);
-	border-style: solid;
-}
-
 .view_header {
 	background-color: #000000aa;
 	right: 5px;
@@ -113,6 +105,7 @@ option {
 	display: flex;
 	align-items: center;
 	flex-direction: row;
+	overflow: hidden;
 
 }
 
@@ -133,7 +126,8 @@ option {
 	border-width: 2px;
 	border-color: rgb(95, 82, 47);
 	border-style: solid;
-	scrollbar-color: rgba(227, 239, 252, 0.637) rgba(12, 12, 12, 0.445);
+	overflow-x: hidden;
+	scrollbar-color: rgba(255, 255, 255, 0.281) rgba(12, 12, 12, 0.445);
 }
 
 .header_element {
@@ -206,6 +200,12 @@ option {
 	transform: translate(0, 40%);
 }
 
+.unitStatsBuildingImg {
+	width: 40px;
+	height: 100%;
+	transform: translate(0, -5%);
+}
+
 #statsUnitBottomContainer {
 	position: absolute;
 	display: flex;
@@ -237,6 +237,7 @@ option {
 
 .statsUnitResourceContainer {
 	font-weight: 700;
+	color: red;
 	display: flex;
 	flex-direction: row;
 	padding: 0 0 0 20px;
@@ -244,10 +245,12 @@ option {
 
 #statsChartContainer {
 	position: relative;
-	left: 60%;
+	right: 0%;
+	left: 30%;
 	top: 10%;
-	width: 180px;
-	right: 10%;
+	bottom: 30%;
+	width: 14%;
+	height: 70%;
 	border-width: 1px;
 	border: none;
 	padding: 5px;
@@ -257,12 +260,26 @@ option {
 	z-index: 10;
 }
 
+#statsUnitRankDiv {
+	position: absolute;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	line-height: 162%;
+	font-weight: 999;
+	font-stretch: extra-expanded;
+	font-size: 12px;
+	text-align: right;
+	top: 2.5%;
+	padding: 0px;
+	bottom: 0%;
+	right: 100%;
+	left: 70%;
+	text-shadow: 2px 2px 2px black;
+}
+
 .chartDiv {
 	position: relative;
 	background-color: rgba(0, 0, 0, 0.5);
-	left: 45%;
-	width: 45%;
-	height: 20%;
+	width: 60%;
 	margin: 3px;
 	padding: 3px;
 	border: dashed;
@@ -298,18 +315,6 @@ sup {
 	top: -0.5em;
 }
 
-#statsUnitRankDiv {
-	position: absolute;
-	line-height: 160%;
-	font-weight: 300;
-	font-size: 12px;
-	text-align: right;
-	top: 3%;
-	padding: 0px;
-	bottom: 0%;
-	right: 55%;
-	left: 10%;
-}
 
 #unitVideo {
 	position: absolute;
@@ -437,7 +442,7 @@ sup {
 	right: 50%;
 	left: 0px;
 	top: 0px;
-	bottom: 0px
+	bottom: 0px;
 }
 
 #deck_view-h {
@@ -507,6 +512,11 @@ sup {
 	overflow: hidden;
 }
 
+#stats_content {
+	display: flex;
+	flex-direction: row;
+}
+
 #unit_table_head {
 	position: sticky;
 	background-color: rgba(0, 0, 0, 0.623);
@@ -528,6 +538,7 @@ sup {
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-evenly;
+	overflow: hidden;
 }
 
 
@@ -662,4 +673,13 @@ sup {
 
 .selected {
 	color: rgb(192, 162, 81);
+}
+
+.view {
+	position: absolute;
+	border-width: 1px;
+	border-color: rgb(95, 82, 47);
+	border-color: rgb(95, 82, 47);
+	border-style: solid;
+	overflow: hidden;
 }
