--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,7 @@ button {
 	font-variant: all-small-caps;
 	font-style: bold;
 	margin: 5px;
-	background-color: rgba(39, 39, 39, 0.7);
+	background-color: rgba(15, 15, 15, 0.37);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
@@ -81,8 +81,8 @@ button:active {
 }
 
 select {
-	background-color: rgba(39, 39, 39, 0.7);
-	color: rgb(189, 173, 128);
+	background-color: rgba(15, 15, 15, 0.37);
+	color: rgb(170, 155, 114);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
@@ -92,25 +92,38 @@ select {
 
 option {
 	color: white;
+	background-color: rgb(15, 15, 15);
+}
+
+.view {
+	position: absolute;
+	border-width: 1px;
+	border-color: rgba(0, 0, 0, 0.322);
+	border-style: solid;
+	border-radius: 5px;
+	box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.304);
+	overflow: hidden;
 }
 
 .view_header {
-	background-color: #000000aa;
+	background-color: rgba(0, 0, 0, 0.664);
+	box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.304);
 	right: 5px;
 	height: 40px;
 	margin: 5px;
 	border-width: 1px;
+	border-radius: 5px;
 	border-color: black;
 	border-style: solid;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
 	overflow: hidden;
-
 }
 
 
 .view_content {
+	border-radius: 5px;
 	display: flex;
 	justify-content: space-evenly;
 	overflow: inherit;
@@ -122,17 +135,14 @@ option {
 	top: 48px;
 	bottom: 2px;
 	border-width: 2px;
-	border-color: rgb(95, 82, 47);
-	border-width: 2px;
-	border-color: rgb(95, 82, 47);
-	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	border-style: none;
 	overflow-x: hidden;
 	scrollbar-color: rgba(255, 255, 255, 0.281) rgba(12, 12, 12, 0.445);
 }
 
 .header_element {
-	color: rgb(199, 199, 199);
-	font-size: 14px;
+	font-size: 16px;
 	font-variant: all-small-caps;
 	font-style: bold;
 	margin: 5px;
@@ -142,9 +152,19 @@ option {
 	width: 98%;
 }
 
-.unit_table_header_image {
-	width: 20px;
+.unit_table_header {
+	font-size: 20px;
+	font-weight: 500;
+	color: rgb(214, 214, 214);
+	line-height: 10px;
 	height: 20px;
+	text-align: center;
+
+}
+
+.unit_table_header_image {
+	width: 24px;
+	height: 24px;
 }
 
 .unit_table_image {
@@ -168,13 +188,13 @@ option {
 }
 
 .unit_table_cell {
-	background-color: #00000022;
+	background-color: #88000011;
 	text-align: center;
 	text-shadow: 2px 2px 1px black;
 }
 
 .unit_table_cell_alt {
-	background-color: #72727222;
+	background-color: #bb222211;
 }
 
 .unit_table_cell_traits {
@@ -182,10 +202,14 @@ option {
 }
 
 .table_add_unit_button {
-	width: 100%;
-	height: 36px;
 	font-style: bold;
-	font-size: 18px;
+	font-size: 24px;
+	width: 100%;
+	height: 100%;
+}
+
+.table_add_unit_button_cell {
+	padding-right: 10px;
 }
 
 #unitStatsImg {
@@ -318,13 +342,13 @@ sup {
 
 #unitVideo {
 	position: absolute;
-	min-width: 100%;
-	min-height: 100%;
-	max-width: 110%;
-	max-height: 125%;
-	bottom: 0;
-	width: auto;
-	height: auto;
+	min-width: 50%;
+	min-height: 50%;
+	max-width: 150%;
+	max-height: 150%;
+	width: 100%;
+	top: -10%;
+	bottom: 10%;
 	overflow: hidden;
 	background-size: cover;
 	z-index: 0;
@@ -436,8 +460,6 @@ sup {
 
 #unit_view-h {
 	overflow: auto;
-	background-image: 'images/a1.png';
-	background-color: #411f1f7c;
 	margin: 3px;
 	right: 50%;
 	left: 0px;
@@ -446,8 +468,6 @@ sup {
 }
 
 #deck_view-h {
-	overflow: auto;
-	background-color: rgba(212, 201, 45, 0.233);
 	margin: 3px;
 	left: 50%;
 	top: 0px;
@@ -456,7 +476,6 @@ sup {
 }
 
 #stats_view-h {
-	background-color: #09ff003d;
 	margin: 3px;
 	left: 50%;
 	top: 50%;
@@ -467,7 +486,6 @@ sup {
 
 #unit_view-v {
 	overflow: auto;
-	background-color: #411f1f7c;
 	margin: 0;
 	left: 0;
 	right: 0;
@@ -482,8 +500,6 @@ sup {
 
 
 #deck_view-v {
-	overflow: auto;
-	background-color: rgba(212, 201, 45, 0.233);
 	margin: 0;
 	height: 29.5%;
 	left: 0;
@@ -497,7 +513,6 @@ sup {
 }
 
 #stats_view-v {
-	background-color: #0b5a0967;
 	margin: 0;
 	margin: 0;
 	height: 30%;
@@ -558,7 +573,7 @@ sup {
 	border-color: rgb(2, 1, 90);
 	border-width: 1px;
 	border-style: solid;
-	overflow-y: hidden;
+	overflow-y: auto;
 	overflow-x: hidden;
 }
 
@@ -673,13 +688,4 @@ sup {
 
 .selected {
 	color: rgb(192, 162, 81);
-}
-
-.view {
-	position: absolute;
-	border-width: 1px;
-	border-color: rgb(95, 82, 47);
-	border-color: rgb(95, 82, 47);
-	border-style: solid;
-	overflow: hidden;
 }
