--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ tr {
 input {
 	background-color: rgba(0, 0, 0, 0.7);
 	border-width: 1px;
-	color: rgb(212, 201, 45);
+	color: rgb(192, 162, 81);
 	font-variant-caps: all-small-caps;
 }
 
@@ -69,6 +69,7 @@ button {
 	border-style: double;
 	height: 60%;
 	border-color: rgb(180, 180, 180);
+	overflow: hidden;
 }
 
 button:hover {
@@ -197,6 +198,12 @@ option {
 	background-color: #bb222211;
 }
 
+.mouseOverSelected {
+	outline-color: rgba(255, 221, 221, 0.342);
+	outline-style: dotted;
+	outline-width: 2px;
+}
+
 .unit_table_cell_traits {
 	width: 100px;
 }
@@ -204,12 +211,14 @@ option {
 .table_add_unit_button {
 	font-style: bold;
 	font-size: 24px;
-	width: 100%;
-	height: 100%;
+	width: 48px;
+	height: 48px;
+	margin: 0 0 0 0;
 }
 
 .table_add_unit_button_cell {
-	padding-right: 10px;
+	padding: 0 5 0 0;
+	margin: 0 0 0 0;
 }
 
 #unitStatsImg {
@@ -368,7 +377,7 @@ sup {
 
 #wrapper {
 	position: absolute;
-	background-image: url('images/a1.png');
+	background-image: url('images/bg/19.jpg');
 	background-position: center center;
 	background-size: cover;
 	border-width: 1px;
@@ -680,10 +689,6 @@ sup {
 .links_content {
 	position: inherit;
 	color: grey;
-}
-
-.selected {
-	color: rgb(192, 162, 81);
 }
 
 .selected {
