--- a/src/styles.css
+++ b/src/styles.css
@@ -38,12 +38,7 @@ td {
 }
 
 .simpleStatsPadding {
-	padding: 0 10px 0 10px;
-}
-
-#sidebarLogoImg {
-	width: 100%;
-	opacity: 20%;
+	padding: 0 5px 0 5px;
 }
 
 tr {
@@ -53,7 +48,7 @@ tr {
 input {
 	background-color: rgba(0, 0, 0, 0.7);
 	border-width: 1px;
-	color: rgb(212, 201, 45);
+	color: rgb(192, 162, 81);
 	font-variant-caps: all-small-caps;
 }
 
@@ -64,16 +59,18 @@ input {
 
 button {
 	color: rgb(199, 199, 199);
+	color: rgb(199, 199, 199);
 	font-size: 14px;
 	font-variant: all-small-caps;
 	font-style: bold;
 	margin: 5px;
-	background-color: rgba(39, 39, 39, 0.7);
+	background-color: rgba(15, 15, 15, 0.37);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
 	height: 60%;
 	border-color: rgb(180, 180, 180);
+	overflow: hidden;
 }
 
 button:hover {
@@ -86,8 +83,8 @@ button:active {
 }
 
 select {
-	background-color: rgba(39, 39, 39, 0.7);
-	color: rgb(189, 173, 128);
+	background-color: rgba(15, 15, 15, 0.37);
+	color: rgb(170, 155, 114);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
@@ -97,32 +94,40 @@ select {
 
 option {
 	color: white;
+	background-color: rgb(15, 15, 15);
 }
 
 .view {
 	position: absolute;
 	border-width: 1px;
-	border-color: rgb(95, 82, 47);
-	border-color: rgb(95, 82, 47);
+	border-color: rgba(0, 0, 0, 0.322);
 	border-style: solid;
+	border-radius: 5px;
+	box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.304);
+	overflow: hidden;
 }
 
 .view_header {
-	background-color: #000000aa;
+	background-color: rgba(0, 0, 0, 0.664);
+	box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.304);
 	right: 5px;
 	height: 40px;
 	margin: 5px;
 	border-width: 1px;
+	border-radius: 5px;
 	border-color: black;
 	border-style: solid;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
-
+	overflow: hidden;
 }
 
 
 .view_content {
+	border-radius: 5px;
+	display: flex;
+	justify-content: space-evenly;
 	overflow: inherit;
 	background-color: #000000aa;
 	position: inherit;
@@ -132,28 +137,44 @@ option {
 	top: 48px;
 	bottom: 2px;
 	border-width: 2px;
-	border-color: rgb(95, 82, 47);
-	border-width: 2px;
-	border-color: rgb(95, 82, 47);
-	border-style: solid;
-	scrollbar-color: rgba(227, 239, 252, 0.637) rgba(12, 12, 12, 0.445);
+	border-color: rgb(0, 0, 0);
+	border-style: none;
+	overflow-x: hidden;
+	scrollbar-color: rgba(255, 255, 255, 0.281) rgba(12, 12, 12, 0.445);
 }
 
 .header_element {
-	color: rgb(199, 199, 199);
-	font-size: 14px;
+	font-size: small;
 	font-variant: all-small-caps;
 	font-style: bold;
-	margin: 5px;
+	margin: 2px;
 }
 
 .unit_table {
-	width: 100%;
+	width: 98%;
+}
+
+.bgImgSelectDiv {
+	margin-top: 20%;
+}
+
+.countdown_div {
+	margin-top: 20%;
+}
+
+.unit_table_header {
+	font-size: 20px;
+	font-weight: 500;
+	color: rgb(214, 214, 214);
+	line-height: 10px;
+	height: 20px;
+	text-align: center;
+
 }
 
 .unit_table_header_image {
-	width: 20px;
-	height: 20px;
+	width: 24px;
+	height: 24px;
 }
 
 .unit_table_image {
@@ -177,23 +198,38 @@ option {
 }
 
 .unit_table_cell {
-	background-color: #00000022;
+	background-color: #88000011;
 	text-align: center;
+	text-shadow: 2px 2px 1px black;
 }
 
 .unit_table_cell_alt {
-	background-color: #72727222;
+	background-color: #bb222211;
+}
+
+.mouseOverSelected {
+	outline: inset;
+	outline-color: rgba(255, 221, 221, 0.651);
+	outline-style: dotted;
+	outline-offset: -3px;
+	outline-width: 1px;
 }
 
 .unit_table_cell_traits {
-	width: 100px;
+	overflow-x: visible;
 }
 
 .table_add_unit_button {
-	width: 100%;
-	height: 36px;
 	font-style: bold;
-	font-size: 18px;
+	font-size: 24px;
+	width: 48px;
+	height: 48px;
+	margin: 0 0 0 0;
+}
+
+.table_add_unit_button_cell {
+	padding: 0 5 0 0;
+	margin: 0 0 0 0;
 }
 
 #unitStatsImg {
@@ -206,6 +242,12 @@ option {
 	width: 20px;
 	height: 20px;
 	transform: translate(0, 40%);
+}
+
+.unitStatsBuildingImg {
+	width: 40px;
+	height: 100%;
+	transform: translate(0, -5%);
 }
 
 #statsUnitBottomContainer {
@@ -239,6 +281,7 @@ option {
 
 .statsUnitResourceContainer {
 	font-weight: 700;
+	color: red;
 	display: flex;
 	flex-direction: row;
 	padding: 0 0 0 20px;
@@ -246,10 +289,12 @@ option {
 
 #statsChartContainer {
 	position: relative;
-	left: 60%;
+	right: 0%;
+	left: 30%;
 	top: 10%;
-	width: 180px;
-	right: 10%;
+	bottom: 30%;
+	width: 14%;
+	height: 70%;
 	border-width: 1px;
 	border: none;
 	padding: 5px;
@@ -259,12 +304,26 @@ option {
 	z-index: 10;
 }
 
+#statsUnitRankDiv {
+	position: absolute;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	line-height: 162%;
+	font-weight: 999;
+	font-stretch: extra-expanded;
+	font-size: 12px;
+	text-align: right;
+	top: 2.5%;
+	padding: 0px;
+	bottom: 0%;
+	right: 100%;
+	left: 70%;
+	text-shadow: 2px 2px 2px black;
+}
+
 .chartDiv {
 	position: relative;
 	background-color: rgba(0, 0, 0, 0.5);
-	left: 45%;
-	width: 45%;
-	height: 20%;
+	width: 60%;
 	margin: 3px;
 	padding: 3px;
 	border: dashed;
@@ -300,28 +359,16 @@ sup {
 	top: -0.5em;
 }
 
-#statsUnitRankDiv {
-	position: absolute;
-	line-height: 160%;
-	font-weight: 300;
-	font-size: 12px;
-	text-align: right;
-	top: 3%;
-	padding: 0px;
-	bottom: 0%;
-	right: 55%;
-	left: 10%;
-}
 
 #unitVideo {
 	position: absolute;
-	min-width: 100%;
-	min-height: 100%;
-	max-width: 110%;
-	max-height: 125%;
-	bottom: 0;
-	width: auto;
-	height: auto;
+	min-width: 50%;
+	min-height: 50%;
+	max-width: 150%;
+	max-height: 150%;
+	width: 100%;
+	top: -10%;
+	bottom: 10%;
 	overflow: hidden;
 	background-size: cover;
 	z-index: 0;
@@ -341,7 +388,7 @@ sup {
 
 #wrapper {
 	position: absolute;
-	background-image: url('images/a1.png');
+	background-image: url('images/bg/19.jpg');
 	background-position: center center;
 	background-size: cover;
 	border-width: 1px;
@@ -354,6 +401,12 @@ sup {
 	display: flex;
 }
 
+#app {
+	position: relative;
+	flex-grow: 1;
+	margin: 5px;
+}
+
 #sidebar {
 	position: relative;
 	font-size: small;
@@ -361,13 +414,21 @@ sup {
 	font-style: bold;
 	height: 100%;
 	float: left;
-	background-color: rgba(39, 39, 39, 0.952);
+	background-color: rgba(8, 8, 10, 0.596);
+	box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+	;
 }
 
-#app {
-	position: relative;
-	flex-grow: 1;
-	margin: 5px;
+#sidebarLogoImg {
+	width: 100%;
+	opacity: 100%;
+	transform: translate(2%, 0);
+}
+
+#sidebarLogoImg {
+	padding: 15 0 0 0;
+	width: 100%;
+	opacity: 100%;
 }
 
 #sidebar_title_div {
@@ -383,11 +444,18 @@ sup {
 	bottom: 0px;
 	padding: 5px;
 	font-size: 12px;
-	color: rgb(158, 158, 158);
+	color: rgba(255, 255, 255, 0.671);
+	text-shadow: 2px 2px 1px black;
 }
 
-.extraSmallFont {
+.sidebar_extraSmallFont {
+	padding: 5 0 5 0;
+	font-family: 'Times New Roman', Times, serif;
 	font-size: 8px;
+	font-variant: normal;
+	color: rgba(255, 255, 255, 0.671);
+	font-weight: 600;
+	text-shadow: 2px 2px 1px black;
 }
 
 #toggleSidebarButton {
@@ -400,7 +468,7 @@ sup {
 	top: 10px;
 	left: 50%;
 	background-image: 'images/burgericon.png';
-	transform: translate(-50%);
+	transform: translate(-40%, 0);
 }
 
 #toggleSidebarButtonImg {
@@ -412,18 +480,14 @@ sup {
 
 #unit_view-h {
 	overflow: auto;
-	background-image: 'images/a1.png';
-	background-color: #cb8e8e88;
 	margin: 3px;
 	right: 50%;
 	left: 0px;
 	top: 0px;
-	bottom: 0px
+	bottom: 0px;
 }
 
 #deck_view-h {
-	overflow: auto;
-	background-color: #cbc48e88;
 	margin: 3px;
 	left: 50%;
 	top: 0px;
@@ -432,7 +496,6 @@ sup {
 }
 
 #stats_view-h {
-	background-color: #8ecb9988;
 	margin: 3px;
 	left: 50%;
 	top: 50%;
@@ -443,7 +506,6 @@ sup {
 
 #unit_view-v {
 	overflow: auto;
-	background-color: #cb8e8e88;
 	margin: 0;
 	left: 0;
 	right: 0;
@@ -458,8 +520,6 @@ sup {
 
 
 #deck_view-v {
-	overflow: auto;
-	background-color: #cbc48e88;
 	margin: 0;
 	height: 29.5%;
 	left: 0;
@@ -473,7 +533,6 @@ sup {
 }
 
 #stats_view-v {
-	background-color: #8ecb9988;
 	margin: 0;
 	margin: 0;
 	height: 30%;
@@ -486,6 +545,11 @@ sup {
 	top: 70%;
 	bottom: 0;
 	overflow: hidden;
+}
+
+#stats_content {
+	display: flex;
+	flex-direction: row;
 }
 
 #unit_table_head {
@@ -501,56 +565,59 @@ sup {
 }
 
 #deck_content {
-	padding: 2%;
+	padding: 10 0 10 0;
 	background-color: rgba(5, 1, 66, 0.685);
 	border: dotted;
 	border-width: 0px;
 	display: flex;
-	flex-flow: row;
+	flex-direction: row;
+	align-items: center;
 	justify-content: space-evenly;
+	overflow: hidden;
 }
 
 
 .deckSlotImage {
-	width: 60px;
-	height: 60px;
+	width: 100%;
+	height: 100%;
 	opacity: 80%;
 	resize: none;
 }
 
-.deckSlotContainer {
-	width: 300px;
-	height: 150px;
-	display: flex;
-	padding: 4px;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
 .deckContainer {
-	width: 310px;
-	height: fit-content;
-	bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	width: 40%;
+	height: 100%;
 	border-color: rgb(2, 1, 90);
 	border-width: 1px;
 	border-style: solid;
-	overflow: hidden;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .deckContainerActive {
 	border-color: rgb(192, 162, 81);
 }
 
+.deckSlotContainer {
+	width: 100%;
+	height: fit-content;
+	margin: 5 0 5 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
 .unit_deck_slot_div {
-	width: 60px;
-	height: 60px;
+	width: 19%;
 	border-color: rgba(2, 0, 36, 0.781);
 	border-width: 2px;
 	border-style: solid;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	margin: 5px;
+	margin: 1%;
 	overflow: hidden;
 }
 
@@ -566,38 +633,58 @@ sup {
 	font-weight: 350;
 	font-size: 16px;
 	line-height: 80%;
-	width: 300px;
+	width: 98%;
+	height: 50%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
 	border: 0px;
 	border-style: solid;
 	padding: 5px;
 }
 
-.deck_stats_table {
+.statDiv {
 	font-variant: small-caps;
-	width: 300px;
+	display: flex;
+	flex-direction: row;
+	width: 20%;
+	height: 10%;
+	padding: 4 0 4 0;
+	align-items: center;
+	justify-content: center;
+	border: dashed;
+	border-width: 1px;
+	border-color: rgba(255, 255, 255, 0.171);
+	background-color: rgba(0, 0, 0, 0.308);
+}
+
+.complexStatDiv {
+	justify-content: left;
+	width: 100%;
+	line-height: 100%;
+	height: 15%;
+}
+
+.resourceStatDiv {
+	width: 30%;
 }
 
 .deck_stats_img {
-	width: 15px;
-	height: 15px;
-
+	width: 30%;
 }
 
-.deck_stats_td {
-	border: none;
-	border-width: 1px;
-	padding: 0px;
-	width: 300px;
-	margin: 0px;
+.resourceStatImg {
+	width: 20%;
 }
 
-.deck_stats_td_right {
-	border: dashed;
-	border-color: rgb(0, 0, 0);
-	border-width: 1px;
-	padding: 0px;
-	width: 1200px;
-	margin: 0px;
+.deck_stats_img {
+	width: 30%;
+}
+
+.deck_stats_img_small {
+	width: 8%;
+	height: 8%;
 }
 
 #unit_view_card_btn {
@@ -613,10 +700,6 @@ sup {
 .links_content {
 	position: inherit;
 	color: grey;
-}
-
-.selected {
-	color: rgb(192, 162, 81);
 }
 
 .selected {
