--- a/src/styles.css
+++ b/src/styles.css
@@ -58,7 +58,6 @@ input {
 
 button {
 	color: rgb(199, 199, 199);
-	color: rgb(199, 199, 199);
 	font-variant: all-small-caps;
 	font-style: bold;
 	margin: 5px;
@@ -66,7 +65,6 @@ button {
 	border-radius: .5vmax;
 	border-width: .1vmax;
 	border-style: solid;
-	height: 60%;
 	border-color: rgb(180, 180, 180);
 	padding: .1vh .1vw;
 	text-wrap: nowrap;
@@ -85,10 +83,9 @@ button:active {
 select {
 	background-color: rgba(15, 15, 15, 0.37);
 	color: rgb(170, 155, 114);
-	border-radius: 10px;
-	border-width: 1px;
-	border-style: double;
-	height: 60%;
+	border-radius: .5vmax;
+	border-width: .1vmax;
+	border-style: solid;
 	border-color: rgb(180, 180, 180);
 }
 
@@ -111,7 +108,7 @@ option {
 	background-color: rgba(0, 0, 0, 0.664);
 	box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.304);
 	right: 5px;
-	height: 40px;
+	height: 4vmin;
 	margin: 5px;
 	border-width: 1px;
 	border-radius: 5px;
@@ -134,7 +131,7 @@ option {
 	margin: 5px;
 	left: 0px;
 	right: 0px;
-	top: 48px;
+	top: 4.6vmin;
 	bottom: 2px;
 	border-width: 2px;
 	border-color: rgb(0, 0, 0);
@@ -144,7 +141,7 @@ option {
 }
 
 .header_element {
-	font-size: normal;
+	font-size: .8vw;
 	padding: 0 .3vw 0 .3vw;
 	font-variant: all-small-caps;
 	font-style: bold;
